[package]
name = "Non-Rust-Components"
version = "0.1.0"
authors = ["Sachin Jangid <34537025+gittysachin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
curl-sys = { git = "https://github.com/alexcrichton/curl-rust.git" }